--- a/EventInfoFromFi/FiEventReports/Top10Events.rdl
+++ b/EventInfoFromFi/FiEventReports/Top10Events.rdl
@@ -6,6 +6,12 @@
     <DataSet Name="Top10Events_Version">
       <SharedDataSet>
         <SharedDataSetReference>Top10_Events_SwVersion</SharedDataSetReference>
+        <QueryParameters>
+          <QueryParameter Name="@Instruments">
+            <Value>=Parameters!Instruments.Value</Value>
+            <rd:UserDefined>true</rd:UserDefined>
+          </QueryParameter>
+        </QueryParameters>
       </SharedDataSet>
       <Fields>
         <Field Name="SwVersion">
@@ -50,13 +56,6 @@
           <Operator>In</Operator>
           <FilterValues>
             <FilterValue>=Parameters!Versions.Value</FilterValue>
-          </FilterValues>
-        </Filter>
-        <Filter>
-          <FilterExpression>=Fields!Instrument.Value</FilterExpression>
-          <Operator>In</Operator>
-          <FilterValues>
-            <FilterValue>=Parameters!Instruments.Value</FilterValue>
           </FilterValues>
         </Filter>
       </Filters>
