--- a/3rdLineQuestions/MainWindow.xaml
+++ b/3rdLineQuestions/MainWindow.xaml
@@ -9,18 +9,18 @@
     <Grid>
         <GroupBox Header="Short" Margin="12,10,205,31">
             <StackPanel>
-                <Button Content="Software" HorizontalAlignment="Left" Height="38" Margin="10,10,0,0" VerticalAlignment="Top" Width="140" Click="AddShortQuestion"/>
-                <Button Content="Hardware" HorizontalAlignment="Left" Height="38" Margin="10,10,0,0" VerticalAlignment="Top" Width="140" Click="AddShortQuestion"/>
-                <Button Content="General" HorizontalAlignment="Left" Height="38" Margin="10,10,0,0" VerticalAlignment="Top" Width="140" Click="AddShortQuestion"/>
-                <Button Content="Support" HorizontalAlignment="Left" Height="38" Margin="10,10,0,0" VerticalAlignment="Top" Width="140" Click="AddShortQuestion"/>
+                <Button Content="Software" Style="{StaticResource ButtonStyle}" Click="AddShortQuestion"/>
+                <Button Content="Hardware" Style="{StaticResource ButtonStyle}"  Click="AddShortQuestion"/>
+                <Button Content="General" Style="{StaticResource ButtonStyle}" Click="AddShortQuestion"/>
+                <Button Content="Support" Style="{StaticResource ButtonStyle}" Click="AddShortQuestion"/>
             </StackPanel>
         </GroupBox>
         <GroupBox Header="Long" Margin="205,10,12,31">
             <StackPanel>
-                <Button Content="Software" HorizontalAlignment="Left" Height="38" Margin="10,10,0,0" VerticalAlignment="Top" Width="140" Click="AddLongQuestion"/>
-                <Button Content="Hardware" HorizontalAlignment="Left" Height="38" Margin="10,10,0,0" VerticalAlignment="Top" Width="140" Click="AddLongQuestion"/>
-                <Button Content="General" HorizontalAlignment="Left" Height="38" Margin="10,10,0,0" VerticalAlignment="Top" Width="140" Click="AddLongQuestion"/>
-                <Button Content="Support" HorizontalAlignment="Left" Height="38" Margin="10,10,0,0" VerticalAlignment="Top" Width="140" Click="AddLongQuestion"/>
+                <Button Content="Software" Style="{StaticResource ButtonStyle}" Click="AddLongQuestion"/>
+                <Button Content="Hardware" Style="{StaticResource ButtonStyle}"  Click="AddLongQuestion"/>
+                <Button Content="General" Style="{StaticResource ButtonStyle}" Click="AddLongQuestion"/>
+                    <Button Content="Support" Style="{StaticResource ButtonStyle}" Click="AddLongQuestion"/>
             </StackPanel>
         </GroupBox>
     </Grid>
