--- a/3rdLineQuestions/Buttons.xaml
+++ b/3rdLineQuestions/Buttons.xaml
@@ -1,10 +1,10 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-
+    <Color x:Key="FossBlue">#FF00285A</Color>
 
     <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
-        <Setter Property="Background" Value="#00285A" />
+        <Setter Property="Background" Value="#FF00285A" />
         <Setter Property="BorderBrush" Value="#00285A" />
         <Setter Property="Foreground" Value="#FFFFFF" />
         <Setter Property="Height" Value="38"/>
@@ -12,6 +12,13 @@
         <Setter Property="Margin" Value="10,10,0,0"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
+    </Style>
+
+    <Style x:Key="GroupBoxStyle" TargetType="{x:Type GroupBox}">
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontFamily" Value="Arial"/>
+        <Setter Property="Foreground"  Value="#FF00285A"/>
+        <Setter Property="FontSize" Value="14"/>
     </Style>
 
 
