--- a/3rdLineQuestions/Buttons.xaml
+++ b/3rdLineQuestions/Buttons.xaml
@@ -12,13 +12,15 @@
         <Setter Property="Margin" Value="10,10,0,0"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="FontFamily" Value="Arial"></Setter>
+        <Setter Property="FontSize" Value="14"/>
     </Style>
 
     <Style x:Key="GroupBoxStyle" TargetType="{x:Type GroupBox}">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="FontFamily" Value="Arial"/>
         <Setter Property="Foreground"  Value="#FF00285A"/>
-        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontSize" Value="15"/>
     </Style>
 
 
